Jamalize now install the asciidoctor plugin for IntelliJ